fix: enpoint flagging và thêm trường status vào updatUser
